[package]
name = "genpass"
version = "1.1.0"
authors = ["Cyryl Płotnicki <cyplo@cyplo.net>"]
description = "A simple, robust, fast, multiplatform commandline random password generator."
repository = "https://github.com/0x7FFFFFFFFFFFFFFF/genpass"
license = "AGPL-3.0"
readme = "README.md"
edition = "2018"


[dependencies]
bitflags = "1.3"
rand = "0.8"
structopt = "0.3"
eff-wordlist = "1.0"
clipboard = "0.5.0"

[dev-dependencies]
zxcvbn = "2"
assert_cmd = "2"
predicates = "2"
